[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Sprites/ship-3.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Scripts/BomberEnemy.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Sounds/boom.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 12.0

[node name="BomberEnemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 4.71239
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="BombTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]
